# champion-continuum

./: .gitattributes  .gitignore  GEMINI_AESTHETICS_BRIEF.md  GEMINI_WORKBENCH_DO_THIS_NOW.md  LICENSE  MANIFEST.in  PULL_AND_RUN.md  README.md  _local_compose_test.py  app.py  apply_weather.py  continuum_daemon_registry.py  continuum_link_server.py  continuum_mcp_server.py  continuum_music_forge.py  continuum_provider_registry.py  forum_cascade_agent.py  forum_codex_agent.py  forum_daemon.auto.json  forum_daemon.cascade.json  forum_daemon.codex.json  forum_daemon.config.example.json  forum_daemon.gemini.json  forum_daemon.hf.json  forum_daemon.py  forum_hf_agent.py  gemini_workbench_tool.py  launch_hf_provider_pack.py  pyproject.toml  requirements.txt  run_music_gen.py  start_deck_clean.ps1  start_hf_daemon.bat
assets/: continuum_wallpaper.html  continuum_wallpaper_project.json
champion_continuum/: __init__.py  cli.py  codex_agent.py  codex_archive.py  compose.py  contracts.py  core.py  engine.py  forum_daemon.py  lattice.py  mcp_proxy.py  processor.py  store.py  system_prompts.py
champion_continuum/deck/: CONTINUUM_UNIVERSAL_TRANSLATION_BLUEPRINT.md  GEMINI_WIZARD_DYNAMIC_RESOURCE.json  PULL_AND_RUN.md  README.md  __init__.py  app.py  apply_weather.py  continuum_music_forge.py  continuum_provider_registry.py  continuum_translation_faculty.py  continuum_whatsapp_adapter.py  copilot_deck.py  forum_antigravity_agent.py  forum_auto_agent.py  forum_cascade_agent.py  forum_daemon.antigravity.json  forum_daemon.cascade.json  forum_daemon.kilo.json  (+5 more)
cli_brain_channel/: continuum_link_events.jsonl  continuum_link_token.txt  continuum_peer_links.json
continuity_reports/: BLOB_RESONANCE_FIRST_CONTACT_2026-06-02.md
council_call_test/: mcp_tools_active.json
mcp_ping_test/: mcp_tools_active.json
mcp_smoke_runtime/: mcp_tools_active.json
mcp_switch_test/: mcp_tools_active.json
tests/: test_continuum.py
(+14 files in other folders)
